--- a/MYTabBar项目/Classes/Login/LoginViewController.xib
+++ b/MYTabBar项目/Classes/Login/LoginViewController.xib
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="denglu" destination="8GU-yB-yRF" id="zd4-OC-cPZ"/>
                 <outlet property="mima" destination="G3I-Gq-2Oq" id="Dgs-VK-rPd"/>
+                <outlet property="tishi" destination="svW-Cf-SYz" id="V4t-yb-hF7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="zhanghao" destination="bGq-C2-WvB" id="KOs-0m-JiQ"/>
             </connections>
@@ -42,9 +43,13 @@
                         <constraint firstAttribute="height" constant="29" id="vKn-1S-wHv"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="svW-Cf-SYz">
+                    <rect key="frame" x="229" y="353" width="67" height="30"/>
+                    <state key="normal" title="提示密码"/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
