--- a/MYTabBar项目/Classes/FourInterFaceViewController/DetailView/LookViewController.xib
+++ b/MYTabBar项目/Classes/FourInterFaceViewController/DetailView/LookViewController.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LookViewController">
@@ -19,10 +18,6 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KER-1e-shV">
-                    <rect key="frame" x="8" y="238" width="304" height="241"/>
-                    <color key="backgroundColor" red="1" green="0.30274376120000002" blue="0.35457761069999999" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PEI-u8-UcR">
                     <rect key="frame" x="8" y="509" width="64" height="30"/>
                     <color key="backgroundColor" red="1" green="0.30274376120000002" blue="0.35457761069999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -56,29 +51,31 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctS-rF-cnd">
-                    <rect key="frame" x="11" y="141" width="299" height="89"/>
+                    <rect key="frame" x="8" y="68" width="304" height="89"/>
                     <color key="backgroundColor" red="0.5507328697945264" green="0.96789103403141363" blue="0.5511548844673726" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="89" id="rIc-XO-2Bn"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KER-1e-shV">
+                    <rect key="frame" x="8" y="186" width="304" height="241"/>
+                    <color key="backgroundColor" red="1" green="0.30274376120000002" blue="0.35457761069999999" alpha="1" colorSpace="calibratedRGB"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.92439054319371727" green="0.92439054319371727" blue="0.92439054319371727" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="wZr-ar-CLH" firstAttribute="top" secondItem="KER-1e-shV" secondAttribute="bottom" constant="30" id="3hQ-vZ-Rtf"/>
-                <constraint firstItem="ctS-rF-cnd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="76o-r8-INK"/>
-                <constraint firstItem="KER-1e-shV" firstAttribute="top" secondItem="ctS-rF-cnd" secondAttribute="bottom" constant="8" symbolic="YES" id="ABZ-Gv-jpJ"/>
-                <constraint firstItem="KER-1e-shV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="238" id="CqO-hP-Hwc"/>
-                <constraint firstItem="ctS-rF-cnd" firstAttribute="centerX" secondItem="KER-1e-shV" secondAttribute="centerX" id="OpG-bA-pa1"/>
-                <constraint firstItem="wZr-ar-CLH" firstAttribute="baseline" secondItem="PEI-u8-UcR" secondAttribute="baseline" id="WnS-AX-QJh"/>
-                <constraint firstItem="KER-1e-shV" firstAttribute="leading" secondItem="PEI-u8-UcR" secondAttribute="leading" id="iWd-AD-XI0"/>
-                <constraint firstAttribute="trailing" secondItem="wZr-ar-CLH" secondAttribute="trailing" constant="13" id="k1s-xU-NS3"/>
-                <constraint firstAttribute="bottom" secondItem="PEI-u8-UcR" secondAttribute="bottom" constant="29" id="qZh-y6-fjH"/>
-                <constraint firstItem="KER-1e-shV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="v5q-pb-4fR"/>
-                <constraint firstItem="ctS-rF-cnd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="11" id="wgr-lV-hm4"/>
+                <constraint firstItem="wZr-ar-CLH" firstAttribute="top" secondItem="KER-1e-shV" secondAttribute="bottom" constant="82" id="2f7-mj-f3I"/>
+                <constraint firstItem="KER-1e-shV" firstAttribute="top" secondItem="ctS-rF-cnd" secondAttribute="bottom" constant="29" id="5S4-kD-exH"/>
+                <constraint firstItem="ctS-rF-cnd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="68" id="AJ5-xD-9MQ"/>
+                <constraint firstItem="PEI-u8-UcR" firstAttribute="baseline" secondItem="wZr-ar-CLH" secondAttribute="baseline" id="ATL-JT-FUg"/>
+                <constraint firstItem="KER-1e-shV" firstAttribute="leading" secondItem="PEI-u8-UcR" secondAttribute="leading" id="QCt-J2-7eB"/>
+                <constraint firstItem="KER-1e-shV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="186" id="aDn-0h-O9D"/>
+                <constraint firstItem="KER-1e-shV" firstAttribute="trailing" secondItem="ctS-rF-cnd" secondAttribute="trailing" id="cZt-QE-aLy"/>
+                <constraint firstItem="ctS-rF-cnd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="kIa-v1-fxf"/>
+                <constraint firstAttribute="bottom" secondItem="PEI-u8-UcR" secondAttribute="bottom" constant="29" id="kVy-RW-RBe"/>
+                <constraint firstAttribute="trailing" secondItem="ctS-rF-cnd" secondAttribute="trailing" constant="8" id="tSf-xE-Zr5"/>
+                <constraint firstAttribute="trailing" secondItem="wZr-ar-CLH" secondAttribute="trailing" constant="13" id="vow-b9-tHJ"/>
+                <constraint firstItem="KER-1e-shV" firstAttribute="leading" secondItem="ctS-rF-cnd" secondAttribute="leading" id="yfq-Om-lnG"/>
             </constraints>
             <point key="canvasLocation" x="407" y="453"/>
         </view>
